--- a/MuchachoStore/templates/pages/servicios.html
+++ b/MuchachoStore/templates/pages/servicios.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static%}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muchacho Store</title>
-    <link rel="stylesheet" href="styles/estilo.css">
-    <link rel="stylesheet" href="styles/estiloServicio.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estiloServicio.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %} ">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %"} ></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -25,7 +25,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="indexprincpal.html" id="titulo">Tienda Muchacho</a>
+                <a class="navbar-brand" href="{% url 'indexPrincipal'%}" id="titulo">Tienda Muchacho</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -35,15 +35,15 @@
                     <ul class="navbar-nav me-auto mb-2-lg-0">
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="indexprincpal.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'indexPrincipal' %}">Inicio</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
+                            <a class="nav-link" href="{% url 'servicios' %}">Servicios</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="indexContacto.html">Contacto</a>
+                            <a class="nav-link" href="{% url 'indexContacto' %}">Contacto</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -52,13 +52,13 @@
                                 Catálogo
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="pendrivesec.html">Pendrives</a></li>
-                                <li><a class="dropdown-item" href="parlantesec.html">Parlantes</a></li>
-                                <li><a class="dropdown-item" href="audifonosec.html">Audifonos</a></li>
+                                <li><a class="dropdown-item" href="{% url 'pendrivesec' %} ">Pendrives</a></li>
+                                <li><a class="dropdown-item" href="{% url 'parlantesec' %} ">Parlantes</a></li>
+                                <li><a class="dropdown-item" href="{% url 'audifonosec' %} ">Audifonos</a></li>
                             </ul>
 
                     </ul>
-                    <a href="login.html">
+                    <a href="{% url 'login' %}">
                         <button type="button" id="userIcon">
                             <i class="bi bi-person"></i>
                         </button>
@@ -84,9 +84,9 @@
         <div class="container-fluid">
 
             <div>
-                <div id="contenedor" class="contaeiner col 6">
+                <div id="contenedor" class="contenedor col-6">
                     <div>
-                        <img src="img/compra.png" alt="servicio-1" class="servicio">
+                        <img src="{% static 'img/compra.png' %} " alt="servicio-1" class="servicio">
                         <div class="informacion">
                             <br>
                             <h4> Compras online</h4>
@@ -104,7 +104,7 @@
                 <div>
                     <div id="contenedor" class="contenedor">
                         <div>
-                            <img src="img/asesoria.png" alt="servicio-2" class="servicio">
+                            <img src="{% static 'img/asesoria.png' %} " alt="servicio-2" class="servicio">
                             <div class="informacion">
                                 <br>
                                 <h4>Asesoria online</h4>
@@ -122,7 +122,7 @@
                     <div>
                         <div id="contenedor" class="contenedor">
                             <div>
-                                <img src="img/seguimiento.png" alt="servicio-3" class="servicio">
+                                <img src="{% static 'img/seguimiento.png' %} " alt="servicio-3" class="servicio">
                                 <div class="informacion">
                                     <br>
                                     <h4>Seguimiento de pedido</h4>
@@ -202,13 +202,13 @@
                             <hr class="mb-4 mt-0 d-inline-block mx-auto"
                                 style="width: 60px; background-color: #7c4dff; height: 2px" />
                             <p>
-                                <a href="parlantesec.html" class="text-white">Parlantes</a>
+                                <a href="{% url 'parlantesec' %}" class="text-white">Parlantes</a>
                             </p>
                             <p>
-                                <a href="pendrivesec.html" class="text-white">Pendrives</a>
+                                <a href="{% url 'pendrivesec' %} " class="text-white">Pendrives</a>
                             </p>
                             <p>
-                                <a href="audifonosec.html" class="text-white">Audífonos</a>
+                                <a href="{% url 'audifonosec' %} " class="text-white">Audífonos</a>
                             </p>
 
                         </div>
