--- a/MuchachoStore/templates/pages/servicios.html
+++ b/MuchachoStore/templates/pages/servicios.html
@@ -84,7 +84,7 @@
         <div class="container-fluid">
 
             <div>
-                <div id="contenedor" class="contenedor col-6">
+                <div id="contenedor" class="contenedor ">
                     <div>
                         <img src="{% static 'img/compra.png' %} " alt="servicio-1" class="servicio">
                         <div class="informacion">
