Redireccionamiento de URL´s para el back-end + Background Image en todos los templates
uwu

Co-authored-by: cammancilla <cammancilla@users.noreply.github.com>

--- a/MuchachoStore/templates/pages/especificacion.html
+++ b/MuchachoStore/templates/pages/especificacion.html
@@ -11,10 +11,10 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      background-image: url(img/background.jpg);
+        font-family: 'Roboto', sans-serif;
+        background-image: url("../../static/img/background.jpg");
     }
-  </style>
+</style>
 </head>
 
 <body>
