--- a/MuchachoStore/templates/pages/servicios.html
+++ b/MuchachoStore/templates/pages/servicios.html
@@ -14,10 +14,9 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url(img/background.jpg);
+            background-image: url("../../static/img/background.jpg");
         }
     </style>
-
 </head>
 
 <body>
