--- a/MuchachoStore/static/css/estiloContacto.css
+++ b/MuchachoStore/static/css/estiloContacto.css
@@ -69,3 +69,8 @@ input[type=number]::-webkit-outer-spin-button {
 p {
   font-size: 0.8rem;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-image: url(/MuchachoStore/static/img/background.jpg);
+}
