--- a/MuchachoStore/templates/pages/audifonosec.html
+++ b/MuchachoStore/templates/pages/audifonosec.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static  %}
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audífonos</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles/estilo.css">
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      background-image: url(img/background.jpg);
+        font-family: 'Roboto', sans-serif;
+        background-image: url("../../static/img/background.jpg");
     }
-  </style>
+</style>
 </head>
 
 
@@ -48,9 +48,9 @@
                 Catálogo
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="pendrivesec.html">Pendrives</a></li>
-                <li><a class="dropdown-item" href="parlantesec.html">Parlantes</a></li>
-                <li><a class="dropdown-item" href="audifonosec.html">Audifonos</a></li>
+                <li><a class="dropdown-item" href="{% url 'pendrivesec' %}">Pendrives</a></li>
+                <li><a class="dropdown-item" href="{% url 'parlantesec' %}">Parlantes</a></li>
+                <li><a class="dropdown-item" href="{% url 'audifonosec' %}">Audifonos</a></li>
               </ul>
 
 
@@ -99,7 +99,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/audifonos.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
+          <img src="{% static 'img/audifonos.png' %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Havit Audífonos Inalámbricos H655BT</h5>
             <p class="precio"> $44.990</p>
@@ -110,7 +110,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/audifonos2.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
+          <img src="{% static 'img/audifonos2.png' %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Audífonos Xiaomi Redmi Buds 4 Lite Black </h5>
             <p class="precio">$22.990</p>
@@ -121,7 +121,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/audifonos3.png" class="rounded mx-auto d-block" alt=" cargando..." height="300px" width="350px">
+          <img src="{% static 'img/audifonos3.png' %}" class="rounded mx-auto d-block" alt=" cargando..." height="300px" width="350px">
           <div class="card-body">
             <h5 class="card-title">Audífonos Motorola Bt Xt 220 Blanco </h5>
             <p class="precio">$24.990</p>
@@ -132,7 +132,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/audifonos4.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="350px">
+          <img src="{% static 'img/audifonos4.png' %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="350px">
           <div class="card-body">
             <h5 class="card-title">Audífonos Gamer Bluetooth Rgb Thuder Micrófono Levo</h5>
             <p class="precio">$29.990</p>
@@ -263,7 +263,7 @@
     <!-- Footer -->
   </main>
 
-  <script src="js/carrito.js"></script>
+  <script src="{% static 'js/carrito.js' %}"></script>
   <script>
     function showCart(x) {
       document.getElementById("products-id").style.display = "block";
