--- a/MuchachoStore/templates/pages/indexprincipal.html
+++ b/MuchachoStore/templates/pages/indexprincipal.html
@@ -15,7 +15,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url(img/background.jpg);
+            background-image: url("../../static/img/background.jpg");
         }
     </style>
 </head>
