--- a/MuchachoStore/templates/pages/login.html
+++ b/MuchachoStore/templates/pages/login.html
@@ -14,7 +14,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url(img/background.jpg);
+            background-image: url("../../static/img/background.jpg");
         }
     </style>
 
