--- a/MuchachoStore/templates/pages/parlantesec.html
+++ b/MuchachoStore/templates/pages/parlantesec.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static  %}
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parlantes</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles/estilo.css">
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      background-image: url(img/background.jpg);
+        font-family: 'Roboto', sans-serif;
+        background-image: url("../../static/img/background.jpg");
     }
-  </style>
+</style>
 </head>
 
 <body onload="loadEventListenrs()">
   <main>
     <nav class="navbar navbar-expand-lg bg-body-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="indexprincpal.html" id="titulo">Tienda Muchacho</a>
+        <a class="navbar-brand" href="{% url 'indexPrincipal' %}" id="titulo">Tienda Muchacho</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,15 +30,15 @@
           <ul class="navbar-nav me-auto mb-2-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="indexprincpal.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'indexPrincipal' %}">Inicio</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link" href="{% url 'servicios' %}">Servicios</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="indexContacto.html">Contacto</a>
+              <a class="nav-link" href="{% url 'indexContacto' %}">Contacto</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -47,13 +47,13 @@
                 Catálogo
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="pendrivesec.html">Pendrives</a></li>
-                <li><a class="dropdown-item" href="parlantesec.html">Parlantes</a></li>
-                <li><a class="dropdown-item" href="audifonosec.html">Audifonos</a></li>
+                <li><a class="dropdown-item" href="{% url 'pendrivesec' %}">Pendrives</a></li>
+                <li><a class="dropdown-item" href="{% url 'parlantesec' %}">Parlantes</a></li>
+                <li><a class="dropdown-item" href="{% url 'audifonosec' %}">Audifonos</a></li>
               </ul>
             </li>
           </ul>
-          <a href="login.html">
+          <a href="{% url 'login' %}">
             <button type="button" id="userIcon">
               <i class="bi bi-person"></i>
             </button>
@@ -95,7 +95,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/parlantee.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
+          <img src="{% static 'img/parlantee.png' %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Parlante Bluetooth Akai abts-ms89</h5>
             <p class="precio">$9.990 </p>
@@ -106,7 +106,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/parlante2.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
+          <img src="{% static "img/parlante2.png" %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Parlante Bluetooth src-xb100 negro</h5>
             <p class="precio">$49.990</p>
@@ -117,7 +117,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/parlante3.png" class="rounded mx-auto d-block" alt=" cargando..." height="300px" width="300px">
+          <img src="{% static 'img/parlante3.png' %}" class="rounded mx-auto d-block" alt=" cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Parlante LG xboom go xg7qbk</h5>
             <p class="precio">$99.990</p>
@@ -128,7 +128,7 @@
 
       <div class="products">
         <div class="card">
-          <img src="img/parlante4.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
+          <img src="{% static 'img/parlante4.png' %}" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">Parlante Bluetooth JBL Charge 5 Negro </h5>
             <p class="precio">$159.990</p>
@@ -194,18 +194,18 @@
               <!-- Links -->
               <h6 class="text-uppercase fw-bold">Productos</h6>
               <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
+                  style="width: 60px; background-color: #7c4dff; height: 2px" />
               <p>
-                <a href="parlantesec.html" class="text-white">Parlantes</a>
+                  <a href="{% url 'pendrivesec' %}" class="text-white">Parlantes</a>
               </p>
               <p>
-                <a href="pendrivesec.html" class="text-white">Pendrives</a>
+                  <a href="{% url 'parlantesec' %}" class="text-white">Pendrives</a>
               </p>
               <p>
-                <a href="audifonosec.html" class="text-white">Audifonos</a>
+                  <a href="{% url 'audifonosec' %}" class="text-white">Audifonos</a>
               </p>
 
-            </div>
+          </div>
             <!-- Grid column -->
 
             <!-- Grid column -->
@@ -257,7 +257,7 @@
     </footer>
     <!-- Footer -->
   </main>
-  <script src="js/carrito.js"></script>
+  <script src="{% static 'js/carrito.js' %}"></script>
   <script>
     function showCart(x) {
       document.getElementById("products-id").style.display = "block";
