--- a/MuchachoStore/templates/pages/indexContacto.html
+++ b/MuchachoStore/templates/pages/indexContacto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{% static 'css/estiloContacto.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <!--XD-->
     
