--- a/MuchachoStore/templates/pages/parlantesec.html
+++ b/MuchachoStore/templates/pages/parlantesec.html
@@ -18,75 +18,9 @@
 </head>
 
 <body onload="loadEventListenrs()">
+  {% include 'base/header.html'%}
+
   <main>
-    <nav class="navbar navbar-expand-lg bg-body-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'indexPrincipal' %}" id="titulo">Tienda Muchacho</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav me-auto mb-2-lg-0">
-
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'indexPrincipal' %}">Inicio</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'servicios' %}">Servicios</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'indexContacto' %}">Contacto</a>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Catálogo
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'pendrivesec' %}">Pendrives</a></li>
-                <li><a class="dropdown-item" href="{% url 'parlantesec' %}">Parlantes</a></li>
-                <li><a class="dropdown-item" href="{% url 'audifonosec' %}">Audifonos</a></li>
-              </ul>
-            </li>
-          </ul>
-          <a href="{% url 'login' %}">
-            <button type="button" id="userIcon">
-              <i class="bi bi-person"></i>
-            </button>
-          </a>
-          <div>
-            <button type="button" id="cartIcon">
-              <i class="bi bi-cart2" onclick="showCart(this)" class="cart"></i>
-            </button>
-            <span id="count-product">0</span>
-          </div>
-          <div class="cart-products" id="products-id">
-            <br>
-            <button type="button" class="btn-close" aria-label="Close" onclick="closeBtn()"></button>
-            <h3>Mi carrito</h3>
-            <div class="card-items">
-              <div class="card-cart">
-
-                <!--  prueba de vista producto
-                <img src="img/pendrive2.png" class="rounded mx-auto d-block" alt="cargando..." height="300px" width="300px">
-                <div class="card-body">
-                <h5 class="card-title">Pendrive 32GB Kingston DataTraveler DT100 G3</h5>
-                <p class="precio">$4.990</p>
-                <h6>Amount: 3</h6> 
-                <span class="delete-product" data-id="">X</span> -->
-
-              </div>
-
-            </div>
-            <h2>Total: $<strong class="price-total">0</strong></h2>
-          </div>
-        </div>
-      </div>
-    </nav>
     <br>
     <!-- Inicio cards -->
     <h3 class="seccion"> Parlantes</h3>
@@ -139,134 +73,11 @@
     </div>
     <br>
     <!-- Fin cards -->
-    <!-- Footer -->
-    <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
-      <!-- Section: Social media -->
-      <section class="d-flex justify-content-between p-4" style="background-color: #2a36e4">
-        <!-- Left -->
-        <div class="me-5">
-          <span>Contacta con nosotros en nuestras Redes Sociales:</span>
-        </div>
-        <!-- Left -->
-
-        <!-- Right -->
-        <div>
-          <a href="https://www.instagram.com/duocucsedeantoniovaras?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-            class="text-white me-4">
-            <i class="bi bi-instagram"></i>
-          </a>
-          <a href="https://www.facebook.com/DuocUC.AntonioVaras" class="text-white me-4">
-            <i class="bi bi-facebook"></i>
-          </a>
-          <a href="https://twitter.com/DuocUC" class="text-white me-4">
-            <i class="bi bi-twitter-x"></i>
-          </a>
-          <a href="https://www.youtube.com/watch?v=VDDUViX3hdU" class="text-white me-4">
-            <i class="bi bi-youtube"></i>
-          </a>
-          <a href="https://github.com/cammancilla/Primera_entrega" class="text-white me-4">
-            <i class="bi bi-github"></i>
-          </a>
-        </div>
-        <!-- Right -->
-      </section>
-      <!-- Section: Social media -->
-
-      <!-- Section: Links  -->
-      <section class="">
-        <div class="container text-center text-md-start mt-5">
-          <!-- Grid row -->
-          <div class="row mt-3">
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <!-- Content -->
-              <h6 class="text-uppercase fw-bold">Muchacho Store</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #5d42a5; height: 2px" />
-              <p>
-                Aquí encontrarás los mejores productos de tecnología a los mejores precios.
-              </p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold">Productos</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                  style="width: 60px; background-color: #7c4dff; height: 2px" />
-              <p>
-                  <a href="{% url 'pendrivesec' %}" class="text-white">Parlantes</a>
-              </p>
-              <p>
-                  <a href="{% url 'parlantesec' %}" class="text-white">Pendrives</a>
-              </p>
-              <p>
-                  <a href="{% url 'audifonosec' %}" class="text-white">Audifonos</a>
-              </p>
-
-          </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold">Links</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
-              <p>
-                <a href="#!" class="text-white">Tu cuenta</a>
-              </p>
-              <p>
-                <a href="#!" class="text-white">Trabaja con nosotros</a>
-              </p>
-
-              <p>
-                <a href="#!" class="text-white">Ayuda</a>
-              </p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold">Contactos</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
-              <p><i class="bi bi-house-door-fill mr-3"></i> Antonio Varas 666, Providencia, Región
-                Metropolitana, Chile</p>
-              <p><i class="bi bi-chat-left-fill mr-3"></i> info@example.com</p>
-              <p><i class="bi bi-telephone-plus-fill mr-3"></i> (2) 2354 0400</p>
-
-            </div>
-            <!-- Grid column -->
-          </div>
-          <!-- Grid row -->
-        </div>
-      </section>
-      <!-- Section: Links  -->
-
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2024 Copyright: Camila Mancilla, Fernando
-        Muñoz
-        <a class="text-white" href="https://github.com/cammancilla/Primera_entrega">
-          https://github.com/cammancilla/Primera_entrega</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
+   
   </main>
   <script src="{% static 'js/carrito.js' %}"></script>
-  <script>
-    function showCart(x) {
-      document.getElementById("products-id").style.display = "block";
-    }
-    function closeBtn() {
-      document.getElementById("products-id").style.display = "none";
-    }
-
-  </script>
+  
+  {% include 'base/footer.html'%}
 </body>
 
 </html>
