Boton de prueba para mandar directamente a la pagina de admin

--- a/MuchachoStore/templates/pages/login.html
+++ b/MuchachoStore/templates/pages/login.html
@@ -49,6 +49,13 @@
 
                             </center>
 
+                            {% comment %} href indexAdmin {% endcomment %}
+
+                            <center>
+                                <a href="{% url 'indexAdmin' %}" class="btn btn-primary btn-lg btn-block">Iniciar
+                                    Sesión</a>
+                            </center>
+
                         </div>
                         <div id="warnings" class="mb-4 mt-4"></div>
 
