--- a/MuchachoStore/templates/pages/login.html
+++ b/MuchachoStore/templates/pages/login.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-   
+
     {% include 'base/header.html'%}
 
     <!-- Login Form -->
@@ -31,7 +31,8 @@
             <div class="col-md-6 mx-auto">
                 <div class="card card-body">
                     <h3 class="text-center mb-4">Inicio de Sesión</h3>
-                    <form action="" id="loginForm">
+                    <form action="{% url 'indexAdmin'%}" method= "POST" id="loginForm">
+                        {% csrf_token %}
                         <div class="mb-4">
                             <label for="correo" class="form-label">Correo Electrónico</label>
                             <input type="email" id="correo" class="form-control" name="correo">
@@ -44,7 +45,7 @@
                         </div>
                         <div class="w-50 mx-auto mb-4">
                             <center>
-                                <button class="btn btn-primary btn-lg btn-block" id="btnLogin">Iniciar
+                                <button class="btn btn-primary btn-lg btn-block" id="btnLogin" type="submit">Iniciar
                                     Sesión</button>
 
                             </center>
