--- a/MuchachoStore/templates/pages/indexAdmin.html
+++ b/MuchachoStore/templates/pages/indexAdmin.html
@@ -66,7 +66,7 @@
 
     <main>
         {% comment %} Contenedor 3 botones {% endcomment %}
-        
+        {% comment %} Crear tabla ul junto los 3 botones {% endcomment %}
         <div class="container bg-white mb-4 mt-4 text-center shadow-lg mx-auto text-center p-3">
             <h1 class="text-center my-5">Panel de Administración</h1>
             <div class = "row">
