Como tan muchacho

--- a/MuchachoStore/templates/pages/indexContacto.html
+++ b/MuchachoStore/templates/pages/indexContacto.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/estiloContacto.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    
     <!--XD-->
     
     <style>
@@ -87,5 +88,5 @@
     {% include 'base/footer.html'%}
 
 </body>
-
+    <script src="{% static 'js/validacionesContacto.js'%}"></script>
 </html>
