--- a/MuchachoStore/templates/pages/indexContacto.html
+++ b/MuchachoStore/templates/pages/indexContacto.html
@@ -1,92 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% load static %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contactanos</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{% static 'css/estiloContacto.css' %}">
-    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="{% static 'css/estiloContacto.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}" />
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    
-    <!--XD-->
-    
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-image: url("../../static/img/background.jpg");
-        }
-    </style>
-</head>
 
-<body>
+    <!--XD-->
+
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        background-image: url("../../static/img/background.jpg");
+      }
+    </style>
+  </head>
+
+  <body>
     {% include 'base/header.html'%}
 
     <main>
-        
+   
+    <div class="container-fluid mt-5 mb-4">
+        <div class="row">
+        <div class="col-md-6 mx-auto">
+            <div class="card card-body">
+            <h3 class="text-center mb-4">Contactanos!</h3>
 
-        <!-- * Crear formulario de contacto, con un titulo y un parrafo -->
-        <!-- * Datos formulario: Primer nombre, apellido, email, telefono, textarea de informacion adicional -->
-        <!-- * Container-Fluid -->
-
-
-        <div class="container-fluid mt-5 mb-4">
-            <div class="row">
-                <div class="col-md-6 mx-auto">
-                    <div class="card card-body">
-                        <h3 class="text-center mb-4">
-                            Contactanos!
-                        </h3>
-
-                        <form action="" id="formularioContacto">
-
-                            <div class="mb-4">
-                                <label for="nombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" name="nombre" id="nombre">
-                            </div>
-
-                            <div class="mb-4">
-                                <label for="apellido" class="form-label">Apellido</label>
-                                <input type="text" name="apellido" id="apellido" class="form-control">
-                            </div>
-
-                            <div class="mb-4">
-                                <label for="correo" class="form-label">Correo</label>
-                                <input type="email" name="correo" id="correo" class="form-control">
-                            </div>
-
-                            <div class="mb-4">
-                                <label for="telefono" class="form-label">Telefono</label>
-                                <input type="number" name="telefono" id="telefono" class="form-control">
-                            </div>
-
-                            <div class="mb-4">
-                                <label for="comentario" class="form-label">Agrega tu comentario / Queja / Recomendación
-                                </label>
-                                <textarea name="comentario" id="comentario" class="form-control"
-                                    style="height: 100px;resize: none;"></textarea>
-                            </div>
-
-                            <div class="w-50 mx-auto mb-4 text-center">
-                                <button class="btn btn-primary" id="btnContacto">Enviar comentarios</button>
-                            </div>
-
-                            <div class="mb-4 mt-4" id="warnings"></div>
-
-                        </form>
-
-                    </div>
+            <form action="" id="formularioContacto">
+                <div class="mb-4">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input
+                    type="text"
+                    class="form-control"
+                    name="nombre"
+                    id="nombre"
+                />
                 </div>
+
+                <div class="mb-4">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input
+                    type="text"
+                    name="apellido"
+                    id="apellido"
+                    class="form-control"
+                />
+                </div>
+
+                <div class="mb-4">
+                <label for="correo" class="form-label">Correo</label>
+                <input
+                    type="email"
+                    name="correo"
+                    id="correo"
+                    class="form-control"
+                />
+                </div>
+
+                <div class="mb-4">
+                <label for="telefono" class="form-label">Telefono</label>
+                <input
+                    type="number"
+                    name="telefono"
+                    id="telefono"
+                    class="form-control"
+                />
+                </div>
+
+                <div class="mb-4">
+                <label for="comentario" class="form-label"
+                    >Agrega tu comentario / Queja / Recomendación
+                </label>
+                <textarea
+                    name="comentario"
+                    id="comentario"
+                    class="form-control"
+                    style="height: 100px; resize: none"
+                ></textarea>
+                </div>
+
+                <div class="w-50 mx-auto mb-4 text-center">
+                <button class="btn btn-primary" id="btnContacto">
+                    Enviar comentarios
+                </button>
+                </div>
+
+                <div class="mb-4 mt-4" id="warnings"></div>
+            </form>
             </div>
         </div>
-
-
-        
+        </div>
+    </div>
     </main>
     {% include 'base/footer.html'%}
-
 </body>
     <script src="{% static 'js/validacionesContacto.js'%}"></script>
 </html>
