--- a/MuchachoStore/templates/pages/registro.html
+++ b/MuchachoStore/templates/pages/registro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 {% load static  %}
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url("../../static/img/background.jpg");
+            background-image: url("{% static 'img/background.jpg' %}");
         }
     </style>
 </head>
